[project]
name = "h3pop-raster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "affine==3.0b1 ; python_full_version >= '3.9'",
    "attrs==25.3.0 ; python_full_version >= '3.8'",
    "branca==0.8.1 ; python_full_version >= '3.7'",
    "certifi==2025.8.3 ; python_full_version >= '3.7'",
    "cffi==1.17.1 ; python_full_version >= '3.8'",
    "charset-normalizer==3.4.2 ; python_full_version >= '3.7'",
    "click==8.2.1 ; python_full_version >= '3.10'",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2 ; python_full_version >= '2.7' and python_full_version < '4'",
    "contextily==1.6.2 ; python_full_version >= '3.9'",
    "contourpy==1.3.3 ; python_full_version >= '3.11'",
    "cycler==0.12.1 ; python_full_version >= '3.8'",
    "flatbuffers==25.2.10",
    "folium==0.20.0 ; python_full_version >= '3.9'",
    "fonttools==4.59.0 ; python_full_version >= '3.9'",
    "geodatasets==2024.8.0 ; python_full_version >= '3.8'",
    "geographiclib==2.0 ; python_full_version >= '3.7'",
    "geopandas==1.1.1 ; python_full_version >= '3.10'",
    "geopy==2.4.1 ; python_full_version >= '3.7'",
    "h3==4.3.1 ; python_full_version >= '3.8'",
    "idna==3.10 ; python_full_version >= '3.6'",
    "jinja2==3.1.6 ; python_full_version >= '3.7'",
    "joblib==1.5.1 ; python_full_version >= '3.9'",
    "kiwisolver==1.4.8 ; python_full_version >= '3.10'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9'",
    "matplotlib==3.10.5 ; python_full_version >= '3.10'",
    "mercantile==1.2.1",
    "numpy==2.3.2 ; python_full_version >= '3.11'",
    "packaging==25.0 ; python_full_version >= '3.8'",
    "pandas==2.3.1 ; python_full_version >= '3.9'",
    "pillow==11.3.0 ; python_full_version >= '3.9'",
    "platformdirs==4.3.8 ; python_full_version >= '3.9'",
    "pooch==1.8.2 ; python_full_version >= '3.7'",
    "pycountry==24.6.1 ; python_full_version >= '3.8'",
    "pycparser==2.22 ; python_full_version >= '3.8'",
    "pyogrio==0.11.1 ; python_full_version >= '3.9'",
    "pyparsing==3.2.3 ; python_full_version >= '3.9'",
    "pyproj==3.7.1 ; python_full_version >= '3.10'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
    "pytz==2025.2",
    "rasterio==1.4.3 ; python_full_version >= '3.9'",
    "requests==2.32.4 ; python_full_version >= '3.8'",
    "shapely==2.1.1 ; python_full_version >= '3.10'",
    "six==1.17.0 ; python_full_version >= '2.7'",
    "timezonefinder==8.0.0 ; python_full_version >= '3.9' and python_full_version < '4'",
    "tzdata==2025.2 ; python_full_version >= '2'",
    "urllib3==2.5.0 ; python_full_version >= '3.9'",
    "xyzservices==2025.4.0 ; python_full_version >= '3.8'",
]

[dependency-groups]
dev = [
    "affine==3.0b1 ; python_full_version >= '3.9'",
    "attrs==25.3.0 ; python_full_version >= '3.8'",
    "branca==0.8.1 ; python_full_version >= '3.7'",
    "certifi==2025.8.3 ; python_full_version >= '3.7'",
    "cffi==1.17.1 ; python_full_version >= '3.8'",
    "charset-normalizer==3.4.2 ; python_full_version >= '3.7'",
    "click==8.2.1 ; python_full_version >= '3.10'",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2 ; python_full_version >= '2.7' and python_full_version < '4'",
    "contextily==1.6.2 ; python_full_version >= '3.9'",
    "contourpy==1.3.3 ; python_full_version >= '3.11'",
    "cycler==0.12.1 ; python_full_version >= '3.8'",
    "flatbuffers==25.2.10",
    "folium==0.20.0 ; python_full_version >= '3.9'",
    "fonttools==4.59.0 ; python_full_version >= '3.9'",
    "geodatasets==2024.8.0 ; python_full_version >= '3.8'",
    "geographiclib==2.0 ; python_full_version >= '3.7'",
    "geopandas==1.1.1 ; python_full_version >= '3.10'",
    "geopy==2.4.1 ; python_full_version >= '3.7'",
    "h3==4.3.1 ; python_full_version >= '3.8'",
    "idna==3.10 ; python_full_version >= '3.6'",
    "jinja2==3.1.6 ; python_full_version >= '3.7'",
    "joblib==1.5.1 ; python_full_version >= '3.9'",
    "kiwisolver==1.4.8 ; python_full_version >= '3.10'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9'",
    "matplotlib==3.10.5 ; python_full_version >= '3.10'",
    "mercantile==1.2.1",
    "numpy==2.3.2 ; python_full_version >= '3.11'",
    "packaging==25.0 ; python_full_version >= '3.8'",
    "pandas==2.3.1 ; python_full_version >= '3.9'",
    "pillow==11.3.0 ; python_full_version >= '3.9'",
    "platformdirs==4.3.8 ; python_full_version >= '3.9'",
    "pooch==1.8.2 ; python_full_version >= '3.7'",
    "pycountry==24.6.1 ; python_full_version >= '3.8'",
    "pycparser==2.22 ; python_full_version >= '3.8'",
    "pyogrio==0.11.1 ; python_full_version >= '3.9'",
    "pyparsing==3.2.3 ; python_full_version >= '3.9'",
    "pyproj==3.7.1 ; python_full_version >= '3.10'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
    "pytz==2025.2",
    "rasterio==1.4.3 ; python_full_version >= '3.9'",
    "requests==2.32.4 ; python_full_version >= '3.8'",
    "shapely==2.1.1 ; python_full_version >= '3.10'",
    "six==1.17.0 ; python_full_version >= '2.7'",
    "timezonefinder==8.0.0 ; python_full_version >= '3.9' and python_full_version < '4'",
    "tzdata==2025.2 ; python_full_version >= '2'",
    "urllib3==2.5.0 ; python_full_version >= '3.9'",
    "xyzservices==2025.4.0 ; python_full_version >= '3.8'",
]
